[package]
name = "saltpack"
version = "0.1.0"
authors = ["Phaiax <phaiax-saltpack@invisibletower.de>"]

[dependencies]
serde = "*"
serde_json = "*"
serde_macros = "*"
rmp = "*"
rmp-serialize = "*"
rustc-serialize = "*"
ramp = { path = "crates/ramp" }
byteorder = "0.4"
regex="*"
regex_macros = "0.1"
sodiumoxide = "0.0.9"