[package]
name = "rsaltpack"
version = "0.1.0"
authors = ["Phaiax <phaiax-rsaltpack@invisibletower.de>"]

[dependencies]
serde = "^0.6"
serde_macros = "^0.6"
rmp = "*"
rmp-serde = "*"
rmp-serialize = "*"
rustc-serialize = "*"
ramp = { path = "crates/ramp" }
byteorder = "0.4"
regex="*"
regex_macros = "0.1"
sodiumoxide = "0.0.9"